# Futurnal

./: .gitignore  ARCHITECTURE_INTEGRATION_SUMMARY.md  BENCHMARK_COMPARISON_PLAN.md  BRANDING_GUIDELINES.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  FINAL_QUALITY_GATES_STATUS.md  FRONTEND_DESIGN.md  FUTURNAL_CONCEPT.md  FUTURNAL_ROADMAP_ENCH.md  IMAP_PRODUCTION_STATUS.md  IMPLEMENTATION_PLAN.md  INVESTMENT_REPORT.md  KEY_DIFFERENCE.md  LICENSE  PRIVACY.md  PRIVACY_POLICY.md  PRODUCTION_TESTING_IMPLEMENTATION_SUMMARY.md  QUALITY_GATES_IMPLEMENTATION_SUMMARY.md  QUALITY_GATES_VERIFICATION_REPORT.md  README.md  SECURITY.md  TASK_09_COMPLETION_REPORT.md  TESTING_PRODUCTION_LLMS.md  VISION_ALIGNMENT_GAP_ANALYSIS.md  new_papers_to_analyze.md  new_verdict.md  pyproject.toml  requirements.txt  test_production_llms.py  test_sync_basic.py  test_sync_integration.py  things_to_do.md
.cursor/rules/: architecture-guidance.mdc  debugging-approach.mdc  docs-style.mdc  experiential-learning.mdc  frontend-design.mdc  futurnal-overview.mdc  library-docs-context.mdc  no-mockups.mdc  option-b-principles.mdc  production-plan-compliance.mdc  prompts-usage.mdc  quality-gates.mdc  schema-evolution.mdc  temporal-extraction.mdc  ui-design-magic.mdc
.github/workflows/: github-connector-tests.yml  imap-connector-tests.yml  local-files-tests.yml  pages.yml  production-release.yml  quality-gates.yml
architecture/: system-architecture.md
config/: retry_policies.yaml.example
desktop/: .env.example  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
desktop/scripts/: generate-icons.js
desktop/src/: App.tsx  main.tsx  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  python.rs
desktop/src-tauri/src/commands/: activity.rs  agents.rs  causal.rs  chat.rs  cloud_sync.rs  connectors.rs  graph.rs  infrastructure.rs  insights.rs  learning.rs  mod.rs  multimodal.rs  notifications.rs  ollama.rs  orchestrator.rs  overlay.rs  papers.rs  privacy.rs  research.rs  schema.rs  search.rs
docs/: FLUTTER_MOBILE_TECH_STACK.md  LLM_MODEL_REGISTRY.md  PHASE-2-3-ARCHITECTURE-NOTES.md  PRODUCTION_LLM_INTEGRATION_SUMMARY.md  README.md  future-vision.md  key-difference.md  market-analysis.md  product-vision.md
docs/api-reference/: README.md  chat-api.md  cli-reference.md  search-api.md
docs/architecture/: causal-reasoning.md
docs/commands/: generate_production_plan.md
docs/examples/: orchestrator-config.yaml
docs/operations/: monitoring-guide.md  performance-tuning.md  recovery-procedures.md  release-checklist.md  rollback-procedure.md
docs/phase-1/: ANALYSIS_SUMMARY_README.md  CRITICAL_IMPLEMENTATION_TRILOGY.md  CRITICAL_PAPER_EARLY_EXPERIENCE.md  FEATURE_ANALYSIS_entity-relationship-extraction.md  FINAL_ANALYSIS_ALL_PAPERS.md  IMPLEMENTATION_PROMPT.md  PHASE-1-OPTION-B-ROADMAP.md  PHASE_1_COMPLETION_PLAN.md  PHASE_1_COMPLETION_REPORT.md  README.md  REVISED_ANALYSIS_2025_PAPERS.md  SOTA_RESEARCH_SUMMARY.md  SPECIFICATION_UPGRADE_RECOMMENDATIONS.md  feature-cloud-escalation-consent.md  feature-cloud-sync-consent.md  feature-document-normalization.md  feature-entity-relationship-extraction.md  feature-github-connector.md  feature-graph-visualization.md  feature-hybrid-search-api.md  feature-imap-connector.md  feature-ingestion-orchestrator.md  feature-landing-page.md  feature-local-files-connector.md  feature-obsidian-connector.md  feature-performance-telemetry.md  feature-pkg-graph-storage.md  feature-privacy-audit-logging.md  feature-search-desktop-shell.md  feature-vector-embedding-service.md  overview.md  p1-production-steps.md
docs/research/: README.md  memory-architecture.md  self-evolution-approach.md
docs/security/: privacy-audit-report.md
docs/testing/: quality-gates-validation.md  user-journey-checklist.md
docs/user-guide/: README.md  data-sources.md  installation.md  privacy-settings.md  quickstart.md  search-chat.md
prompts/: phase-1-archivist.md  phase-2-analyst.md  phase-2.5-research-integration.md  phase-3-guide.md
requirements/: roadmap.md  system-requirements.md
scripts/: build-all-platforms.sh  validate-production-readiness.py  verify_step00.py
site/: app.js  index.html  styles.css
src/futurnal/: __init__.py  integration_demo.py
src/futurnal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py
tests/analysis/: __init__.py
tests/chat/: __init__.py  test_chat_service.py
tests/cli/: test_local_sources.py  test_obsidian_cli.py  test_orchestrator_cli.py
tests/configuration/: test_settings.py
tests/e2e/: __init__.py  test_user_journey.py
tests/embeddings/: __init__.py  conftest.py  test_consistency_validator.py  test_fusion.py  test_incremental_updater.py  test_metrics.py  test_models.py  test_multi_model_integration.py  test_performance_profiler.py  test_quality_evolution.py  test_quality_metrics.py  test_quality_store.py  test_quality_tracker.py  test_reembedding.py  test_registry.py  test_request.py  test_router.py  test_schema_versioned_integration.py  test_schema_versioned_store.py  test_service.py  test_sync_handler.py  test_temporal_event_embedder.py
tests/extraction/: test_corpus.py  test_ocr_client.py  test_orchestrator_client.py  test_production_readiness.py  (+2 more)
(+1105 files in other folders)
