[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "futurnal"
version = "0.1.0"
description = "Futurnal Phase 1 ingestion components"
requires-python = ">=3.11"
dependencies = ["typer>=0.12"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "performance: mark performance benchmark tests",
]


