[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "futurnal"
version = "0.1.0"
description = "Futurnal Phase 1 ingestion components"
requires-python = ">=3.11"
dependencies = ["typer>=0.12", "imapclient>=3.3", "certifi>=2024.2.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "performance: mark performance benchmark tests",
    "provider_gmail: Gmail-specific IMAP tests",
    "provider_office365: Office365-specific IMAP tests",
    "provider_generic: Generic IMAP server tests",
    "security: Security and privacy validation tests",
    "accuracy: Thread reconstruction and extraction accuracy tests",
    "integration: End-to-end workflow integration tests",
    # GitHub connector specific markers
    "github_integration: GitHub end-to-end sync and workflow tests",
    "github_security: GitHub security validation and credential safety tests",
    "github_performance: GitHub performance benchmarks with defined targets",
    "github_load: GitHub load and stress tests for rate limits and concurrency",
    "github_provider_com: GitHub.com specific tests (public cloud)",
    "github_provider_enterprise: GitHub Enterprise Server specific tests",
    "github_regression: GitHub critical path regression tests",
    "github_manual: GitHub manual verification tests requiring user interaction",
    # Orchestrator load and fairness testing markers
    "load: Load and fairness tests for orchestrator",
    "slow: Slow-running tests (>10s)",
    # Temporal extraction markers
    "production_readiness: Production readiness gates for temporal extraction",
]

